chore: update Scala version to 3.7.0, refactor static generation settings, and add JVM options